# applia

./: .gitignore  README.md  runapi.bat  runapp.bat
.cursor/rules/: read-context-before-work.mdc
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial.py
api/app/: __init__.py  database.py  main.py
api/app/api/: __init__.py  deps.py  documents.py  me.py  router.py
api/app/models/: __init__.py  document.py  exam_item.py  response.py  user.py
api/app/services/: document_service.py  storage_service.py  user_service.py
api/app/worker/: __init__.py
app/: .env.example  App.tsx  app.json  package-lock.json  package.json
app/src/api/: client.ts  firebase.ts
app/src/components/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  ListItem.tsx  ProfileContent.tsx  ScreenContainer.tsx  Switch.tsx  index.ts
app/src/navigation/: DrawerContent.tsx  DrawerLayout.tsx
app/src/screens/: DiscoveryScreen.tsx  ExamsScreen.tsx  HomeScreen.tsx  ImportScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx  SignupScreen.tsx
app/src/theme/: index.ts  (+1 more)
docs/: architecture.md  design.md  mvp.md
specs/: 003-home-exams-dashboard.md
specs/001-dra-lia-prototype/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dra-lia-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-home-exams-dashboard/: plan.md  spec.md  tasks.md
(+18 files in other folders)
